--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     </header>
     <main>
         <h1>Marco Zero</h1>
-        <img
-            src="https://th.bing.com/th/id/R.f9cf0542f3500c326a8ef2bd92f92856?rik=AzokCFmZzJSeDg&pid=ImgRaw&r=0&sres=1&sresct=1">
+        <img src="https://th.bing.com/th/id/R.f9cf0542f3500c326a8ef2bd92f92856?rik=AzokCFmZzJSeDg&pid=ImgRaw&r=0&sres=1&sresct=1">
         <p>O Marco Zero em Recife é um dos destinos históricos mais importantes do nordeste do país. A região reúne
             atrações históricas e culturais, centro de artesanato e ótimos restaurantes. Além disso, é o principal local
             do carnaval de Pernambuco, reunindo música, alegria e muita festa.</p>
